--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
     <footer class="footer">
       <div class="footer-content">
           <div class="footer-section contact-info">
-              <h3>Pascoal Rodas</h3>
-              <p>Endereço: Avenida Alzira Santana, 123 - Bairro: Jardim Novo Horizonte, Cidade: Varzea grande, Estado: Mato Grosso</p>
-              <p>Telefone: (65) 3364-6282</p>
-              <p>Email: contato@pascoalrodas.com.br</p>
+              <h3 id="foh3" >Pascoal Rodas</h3>
+              <p  id="foEnd">Endereço: Avenida Alzira Santana, 123 - Bairro: Jardim Novo Horizonte, Cidade: Varzea grande, Estado: Mato Grosso</p>
+              <p id="foTel">Telefone: <br> (65) 3364-6282</p>
+
+              <p id="foemail">Email: contato@pascoalrodas.com.br</p>
           </div>
           <div class="footer-section social-links">
-              <h3>Siga-nos</h3>
+              <h3 id="siganos">Siga-nos</h3>
               <div class="social-icons">
                   <a href="https://www.facebook.com/pascoal.rodas" target="_blank"><i class="fab fa-facebook"></i></a>
                   
